maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:16: error: not found: value Random
 Seq.fill(n)(Random.nextInt) } 
             ^